fixed some font size in presentation cards + added subtitle on mobile display

--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,6 @@ nav svg{
   width:8%;
   justify-content: space-evenly;
   align-items: center;
-  border:solid;
 }
 
 .desktop-sociallinks svg{
@@ -168,6 +167,7 @@ nav svg{
 
 .profile-picture-container > h2{
   font-weight: 500;
+  font-size: clamp(20px, 3vw, 35px);
 }
 
 .profile-img{
@@ -207,6 +207,7 @@ nav svg{
 
 .presentation-field h3{
   font-weight:500;
+  font-size: clamp(10px, 3vw, 45px)
 }
 
 .presentation-field > svg {
